[package]
name = "bevy_window"
version = "0.6.0"
edition = "2021"
description = "Provides windowing functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.6.0" }
bevy_math = { path = "../bevy_math", version = "0.6.0" }
bevy_utils = { path = "../bevy_utils", version = "0.6.0" }
raw-window-handle = "0.4.2"

# other
uuid = { version = "0.8", features = ["v4", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "0.8", features = ["wasm-bindgen"] }
web-sys = "0.3"
